filter and sort started

--- a/src/app/BudgetScreen/components/budgetscreen.component.html
+++ b/src/app/BudgetScreen/components/budgetscreen.component.html
@@ -1,20 +1,31 @@
-<div class="all consuming">
+<div>
+  <div class="description-filter">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter on Description">
+    </mat-form-field>
+  </div>
+
   <button mat-raised-button (click)="addItem()">Add New Budget Item</button>
   
-  <mat-table #table [dataSource]="dataSource">
+  <mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="itemdescription">
-      <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.ItemDescription}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="itemcost">
-      <mat-header-cell *matHeaderCellDef> Cost </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Cost </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.ItemCost}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="itempaid">
-      <mat-header-cell *matHeaderCellDef> Paid </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Paid </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.ItemPaid}} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="outstanding">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Outstanding </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.ItemCost - element.ItemPaid}} </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
